--- a/Aula5/aula05_pandas2_aula.ipynb
+++ b/Aula5/aula05_pandas2_aula.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -60,9 +60,9 @@
        "      <td>110201</td>\n",
        "      <td>Antonio Carlos</td>\n",
        "      <td>20</td>\n",
-       "      <td>6,5</td>\n",
-       "      <td>8,5</td>\n",
-       "      <td>7,0</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -70,9 +70,9 @@
        "      <td>110212</td>\n",
        "      <td>Ana Beatriz</td>\n",
        "      <td>20</td>\n",
-       "      <td>7,0</td>\n",
-       "      <td>7,0</td>\n",
-       "      <td>7,0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -80,9 +80,9 @@
        "      <td>110218</td>\n",
        "      <td>Carlos Vernes</td>\n",
        "      <td>17</td>\n",
-       "      <td>7,0</td>\n",
-       "      <td>7,0</td>\n",
-       "      <td>7,0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -90,9 +90,9 @@
        "      <td>110307</td>\n",
        "      <td>Francisco Cunha</td>\n",
        "      <td>20</td>\n",
-       "      <td>9,0</td>\n",
-       "      <td>8,5</td>\n",
-       "      <td>8,5</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>8.5</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -100,9 +100,9 @@
        "      <td>110275</td>\n",
        "      <td>Sandra Rosa</td>\n",
        "      <td>15</td>\n",
-       "      <td>6,5</td>\n",
-       "      <td>7,5</td>\n",
-       "      <td>7,0</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -110,43 +110,152 @@
        "</div>"
       ],
       "text/plain": [
-       "       RA             Nome  Frequencia Prova_1 Prova_2 Prova_3  Prova_4\n",
-       "0  110201   Antonio Carlos          20     6,5     8,5     7,0        6\n",
-       "1  110212      Ana Beatriz          20     7,0     7,0     7,0        8\n",
-       "2  110218    Carlos Vernes          17     7,0     7,0     7,0        7\n",
-       "3  110307  Francisco Cunha          20     9,0     8,5     8,5       10\n",
-       "4  110275      Sandra Rosa          15     6,5     7,5     7,0        7"
+       "       RA             Nome  Frequencia  Prova_1  Prova_2  Prova_3  Prova_4\n",
+       "0  110201   Antonio Carlos          20      6.5      8.5      7.0        6\n",
+       "1  110212      Ana Beatriz          20      7.0      7.0      7.0        8\n",
+       "2  110218    Carlos Vernes          17      7.0      7.0      7.0        7\n",
+       "3  110307  Francisco Cunha          20      9.0      8.5      8.5       10\n",
+       "4  110275      Sandra Rosa          15      6.5      7.5      7.0        7"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "alunos3 = pd.read_csv(r'alunos3.csv', sep=';')\n",
+    "alunos3 = pd.read_csv(r'alunos3.csv', sep=';', decimal=',')\n",
     "alunos3.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alunos3['media_provas'] = alunos3[['Prova_1', 'Prova_2', 'Prova_3', 'Prova_4']].mean(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'axis' is an invalid keyword argument for sum()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m alunos3[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmedia_provas\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43malunos3\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mProva_1\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mProva_2\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mProva_3\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mProva_4\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m4\u001b[39m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'axis' is an invalid keyword argument for sum()"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RA</th>\n",
+       "      <th>Nome</th>\n",
+       "      <th>Frequencia</th>\n",
+       "      <th>Prova_1</th>\n",
+       "      <th>Prova_2</th>\n",
+       "      <th>Prova_3</th>\n",
+       "      <th>Prova_4</th>\n",
+       "      <th>media_provas</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>110201</td>\n",
+       "      <td>Antonio Carlos</td>\n",
+       "      <td>20</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>110212</td>\n",
+       "      <td>Ana Beatriz</td>\n",
+       "      <td>20</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>110218</td>\n",
+       "      <td>Carlos Vernes</td>\n",
+       "      <td>17</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>110307</td>\n",
+       "      <td>Francisco Cunha</td>\n",
+       "      <td>20</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>110275</td>\n",
+       "      <td>Sandra Rosa</td>\n",
+       "      <td>15</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       RA             Nome  Frequencia  Prova_1  Prova_2  Prova_3  Prova_4  \\\n",
+       "0  110201   Antonio Carlos          20      6.5      8.5      7.0        6   \n",
+       "1  110212      Ana Beatriz          20      7.0      7.0      7.0        8   \n",
+       "2  110218    Carlos Vernes          17      7.0      7.0      7.0        7   \n",
+       "3  110307  Francisco Cunha          20      9.0      8.5      8.5       10   \n",
+       "4  110275      Sandra Rosa          15      6.5      7.5      7.0        7   \n",
+       "\n",
+       "   media_provas  \n",
+       "0          7.00  \n",
+       "1          7.25  \n",
+       "2          7.00  \n",
+       "3          9.00  \n",
+       "4          7.00  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "alunos3['media_provas'] = alunos3[['Prova_1', 'Prova_2', 'Prova_3', 'Prova_4']].mean(axis=1)"
+    "alunos3.head()"
    ]
   },
   {
@@ -158,31 +267,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "José Valente\n",
+      "Joao Galo\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(alunos3['Nome'].loc[alunos3['media_provas'].idxmax()])\n",
+    "print(alunos3['Nome'].loc[alunos3['media_provas'].idxmin()])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -196,14 +296,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "cadastro_alunos = pd.read_excel('cadastro_alunos.xlsx')\n",
+    "df_escola = alunos3.merge(cadastro_alunos, how='left')\n",
+    "df_escola"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -217,7 +314,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_masc = df_escola [df_escola['Sexo'] == 'Masculino']\n",
+    "df_fem = df_escola [df_escola['Sexo'] == 'Feminino']\n",
+    "\n",
+    "media_masc = df_masc['Media_provas'].mean()\n",
+    "media_fem = df_fem['Media_provas'].mean()\n",
+    "\n",
+    "print (f'A média dos alunos é {media_masc} e das alunas {media_fem}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -231,34 +336,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "idade_media_maior_7 = df_escola[df_escola['Media_provas'] >= 7]['Idade'].mean()\n",
+    "idade_media_maior_7"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "6) Qual das cidades possui o maior média de Media_provas? E qual é este valor?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df_escola['Nome'].loc[df_escola['media_provas'].idxmax()])"
    ]
   }
  ],
