--- a/Aula4/Pandas DataFrames exercises.ipynb
+++ b/Aula4/Pandas DataFrames exercises.ipynb
@@ -1413,6 +1413,128 @@
    "source": [
     "## DataFrame summary statistics"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 20 entries, Spider-Man to Vision\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column            Non-Null Count  Dtype \n",
+      "---  ------            --------------  ----- \n",
+      " 0   genero            20 non-null     object\n",
+      " 1   first_appearance  20 non-null     int64 \n",
+      " 2   years_since       20 non-null     int64 \n",
+      "dtypes: int64(2), object(1)\n",
+      "memory usage: 640.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "marvel_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first_appearance</th>\n",
+       "      <th>years_since</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1961.650000</td>\n",
+       "      <td>1961.650000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>8.298859</td>\n",
+       "      <td>8.298859</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1939.000000</td>\n",
+       "      <td>1939.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1961.750000</td>\n",
+       "      <td>1961.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1963.000000</td>\n",
+       "      <td>1963.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1964.000000</td>\n",
+       "      <td>1964.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1975.000000</td>\n",
+       "      <td>1975.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       first_appearance  years_since\n",
+       "count         20.000000    20.000000\n",
+       "mean        1961.650000  1961.650000\n",
+       "std            8.298859     8.298859\n",
+       "min         1939.000000  1939.000000\n",
+       "25%         1961.750000  1961.750000\n",
+       "50%         1963.000000  1963.000000\n",
+       "75%         1964.000000  1964.000000\n",
+       "max         1975.000000  1975.000000"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "marvel_df.describe()"
+   ]
   }
  ],
  "metadata": {
